# AI-Character-Conversation-Platform

./: .coverage  .env  .gitignore  README.md  app.py  main.py  requirements.txt
backend/: .env.example  README.md  __init__.py  api_demo.py  environment.yml  main.py  pyproject.toml  setup.py
backend/api/: __init__.py
backend/api/v1/: routes.py
backend/core/: __init__.py  config.py  logging.py
backend/model/: __init__.py  schemas.py
backend/service/: __init__.py  character_service.py  chat_service.py  container.py  conversation_service.py  llm_service.py  platform_service.py  user_service.py
backend/tests/: test_chat_stub.py  test_health.py  test_platform_and_llm.py  test_services.py  test_utils.py
backend/utils/: __init__.py  faiss_helper.py
backend/web/: __init__.py  routes.py
data/: characters.json
data/conversations/: 0cae2cab-6284-4896-b2df-3f8dbb2943d6.json  0f3baf73-712e-40cf-9280-dcde72a8b8ed.json  15aecce8-0b2f-432e-920a-ff8f405492cc.json  16f7f9c7-5a18-4fa5-8f8f-1d2a9913ea74.json  1b1c9f32-44c2-40d7-9749-0129d82579a1.json  2b9f402b-126c-4b46-948e-2ca5366495e5.json  2fed10fc-55e8-4284-a302-83848deb3340.json  3124ce28-0860-44ac-b186-594170a66d2a.json  41dbeca5-8cf5-4f99-b0ca-fc6d61bc1d59.json  544b9a29-6c3b-461f-9b1e-f2e91df9dbdc.json  5582eb01-8788-44e1-a82c-9d684980bb73.json  62f2e22f-e403-476b-89e0-7eb0fbc78fef.json  743c9a1f-4f7b-4e1c-aba6-01f590c642cb.json  76b4e01c-6357-44d5-b880-865d996ebb9d.json  7a05856f-14e6-4a74-ad5e-7496219f6fc4.json  (+11 more)
templates/: characters.html  chat.html  conversations.html  create_character.html
