[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-character-backend"
version = "0.1.0"
description = "FastAPI backend for AI Character Conversation Platform"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fastapi", "langchain", "groq", "faiss", "ai"]
authors = [
  { name = "DivverseLabs", email = "team@example.com" }
]

# Keep runtime deps minimal; the repo root requirements.txt lists full stack.
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "requests",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
]
